--- a/unity-project/Assets/Scripts/io.livekit.unitydemo.asmdef
+++ b/unity-project/Assets/Scripts/io.livekit.unitydemo.asmdef
@@ -4,15 +4,12 @@
     "references": [
         "GUID:1c5ecf4cae47c904f84a51998ad527dd",
         "GUID:ae3e71e072a29bd4fb43afb30ec62dd1",
-        "GUID:30817c1a0e6d646d99c048fc403f5979",
         "GUID:d60799ab2a985554ea1a39cd38695018",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [
-        "LinuxStandalone64"
-    ],
-    "allowUnsafeCode": false,
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
