--- a/unity-project/Packages/manifest.json
+++ b/unity-project/Packages/manifest.json
@@ -8,11 +8,10 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.2.1",
     "com.unity.probuilder": "5.0.4",
-    "com.unity.shadergraph": "13.1.7",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.0-pre.2",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "13.1.7",
     "com.unity.visualscripting": "1.7.5",
     "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "io.livekit.unity": "file:/Users/theomonnom/Desktop/client-sdk-unity-web",
