update lfs files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 unity-project/Assets/TextMesh*Pro/** linguist-vendored
 *.gz filter=lfs diff=lfs merge=lfs -text
+*.br filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.exr filter=lfs diff=lfs merge=lfs -text
