--- a/unity-project/Packages/manifest.json
+++ b/unity-project/Packages/manifest.json
@@ -2,19 +2,17 @@
   "dependencies": {
     "be.feeps.tools": "file:/Users/theomonnom/Desktop/feeps-tools",
     "be.feeps.twirpunity": "https://github.com/ifl-studio/twirp-client-unity.git?path=twirp-package",
-    "com.unity.collab-proxy": "1.15.13",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.13",
+    "com.unity.collab-proxy": "1.15.15",
+    "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.postprocessing": "3.2.1",
-    "com.unity.probuilder": "5.0.4",
+    "com.unity.postprocessing": "3.2.2",
+    "com.unity.shadergraph": "13.1.7",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "13.1.7",
     "com.unity.visualscripting": "1.7.5",
-    "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "io.livekit.unity": "file:/Users/theomonnom/Desktop/client-sdk-unity-web",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
