--- a/unity-project/Packages/manifest.json
+++ b/unity-project/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "be.feeps.twirpunity": "https://github.com/ifl-studio/twirp-client-unity.git?path=twirp-package",
-    "com.unity.collab-proxy": "1.15.15",
+    "be.feeps.twirpunity": "https://github.com/theomonnom/twirp-client-unity.git?path=twirp-package",
+    "com.unity.collab-proxy": "1.15.16",
     "com.unity.ide.rider": "3.0.13",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
@@ -12,7 +12,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.6",
-    "io.livekit.unity": "file:/Users/theomonnom/Desktop/client-sdk-unity-web",
+    "io.livekit.unity": "https://github.com/livekit/client-sdk-unity-web.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
