--- a/unity-project/Packages/manifest.json
+++ b/unity-project/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "be.feeps.twirpunity": "https://github.com/theomonnom/twirp-client-unity.git?path=twirp-package",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.15.16",
     "com.unity.ide.rider": "3.0.13",
     "com.unity.ide.visualstudio": "2.0.14",
